# gistory

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README-zh.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
gistory/: __init__.py  cli.py  git_stats.py  llm_report.py  terminal.py
gitwrapped/: __init__.py  cli.py  html_report.py  terminal.py
